tests/DevantlerTech.KubernetesGenerator.Native.Tests/NetworkPolicyGeneratorTests/ip-block-policy.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: secure
  name: ip-block-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - iPBlock:
        cIDR: 10.0.0.0/8
        except:
        - 10.0.1.0/24
        - 10.0.2.0/24
  egress:
  - ports:
    - protocol: UDP
      port: 53
    to:
    - iPBlock:
        cIDR: 192.168.0.0/16
