tests/DevantlerTech.KubernetesGenerator.Native.Tests/NetworkPolicyGeneratorTests/minimal-policy.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: minimal-policy
spec:
  podSelector:
    matchLabels:
      app: webapp
