tests/DevantlerTech.KubernetesGenerator.Native.Tests/NetworkPolicyGeneratorTests/namespace-selector-policy.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: staging
  name: namespace-selector-policy
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    from:
    - podSelector:
        matchLabels:
          role: client
      namespaceSelector:
        matchLabels:
          environment: production
