tests/DevantlerTech.KubernetesGenerator.Native.Tests/NetworkPolicyGeneratorTests/network-policy-minimal.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-minimal
spec:
  podSelector:
    matchLabels:
      app: nginx
